use webpack instead of gulp

--- a/resources/assets/sass/v2/common/_common.scss
+++ b/resources/assets/sass/v2/common/_common.scss
@@ -10,7 +10,7 @@
         'package/package',
         'token/package',
         'markdown-content/markdown',
-        'snow/snow',
+        //'snow/snow',
         'label/label',
         'pagebuilder/index';
 
