--- a/resources/assets/sass/v2/pages/forum/_forum.scss
+++ b/resources/assets/sass/v2/pages/forum/_forum.scss
@@ -1,7 +1,8 @@
 &.forum {
 
     .forum_wrapper {
-        margin-top:$gutter + $inner_gutter;
+        //margin-top:$gutter + $inner_gutter;
+        margin-top:-240px;
         margin-bottom:$large-gutter;
 
         h1 {
@@ -40,13 +41,27 @@
         }
     }
 
-    @media (max-width:767px) {
-        .sendmessage {
-            display: block !important;
-            text-align: center;
-            margin: -15px auto 15px !important;
+    .frame.simple {
+        margin-top:50px;
+    }
+
+    .create-wrapper {
+        width:100%;
+        text-align: right;
+        margin-bottom:10px;
+
+        .create {
         }
     }
+
+
+    //@media (max-width:767px) {
+    //    .sendmessage {
+    //        display: block !important;
+    //        text-align: center;
+    //        margin: -15px auto 15px !important;
+    //    }
+    //}
 
 
     @media (max-width:499px) {
