--- a/resources/assets/sass/v2/pages/forum/thread-show.scss
+++ b/resources/assets/sass/v2/pages/forum/thread-show.scss
@@ -9,8 +9,65 @@
         float:right;
 
 
-        @media (max-width:499px) {
+        @media (max-width:1199px) {
+            display:block;
+            width:100%;
+            text-align: right;
             float:none;
         }
     }
+
+    @media (max-width:499px) {
+        .characters {
+            display: none;
+        }
+
+        .persona {
+            padding:5px 30px;
+
+            .person-data {
+                vertical-align: middle;
+                text-align: left !important;
+                width:100% !important;
+
+                .thumbnail {
+                    float: left;
+                    display: inline-block;
+                    margin:0;
+                    width:40px;
+                    height:50px;
+                    margin-top:-6px;
+                    margin-left:-10px;
+
+                    &:before {
+                        width:40px;
+                        height:50px;
+                    }
+
+                    img {
+                        width:auto !important;
+                        height:auto !important;
+                        margin-top: 9px;
+                        margin-left: 6px;
+                    }
+                }
+
+                .linkwrapper {
+                    margin-top:10px;
+                    margin-left:25px;
+                }
+
+                .role {
+                    display: inline-block;
+                    float:right;
+                    margin-top:10px;
+                }
+
+                .stats {
+                    display: none
+                }
+            }
+        }
+    }
+
 }
