quick-fix aberation gold theme forum

--- a/resources/assets/sass/v2/layout/themes/aberration_gold/forum.scss
+++ b/resources/assets/sass/v2/layout/themes/aberration_gold/forum.scss
@@ -4,6 +4,10 @@
         background:transparent
     }
 
+    .banner:after {
+        display:none;
+    }
+
     .breadcrumb {
         background:rgba(231,226,183, 0.1);
 
