show server for tribe-card on character page

--- a/resources/assets/sass/v2/pages/character/information.scss
+++ b/resources/assets/sass/v2/pages/character/information.scss
@@ -16,7 +16,7 @@
             //height:100px;
 
             .server {
-                display:none;
+                //display:none;
             }
             //
             //h1 {
