new page tweak for extinction theme

--- a/resources/assets/sass/v2/layout/themes/extinction/index.scss
+++ b/resources/assets/sass/v2/layout/themes/extinction/index.scss
@@ -53,7 +53,12 @@
         //color:#66ecec !important;
     }
 
-    &.news.show p {
+    &.news.show p,
+    &.news.archive p {
+        color:#fff;
+    }
+
+    &.news.archive .article-block__title {
         color:#fff;
     }
 
