disable report cache warm + setup basics custom theme

--- a/resources/assets/sass/v2/layout/themes/index.scss
+++ b/resources/assets/sass/v2/layout/themes/index.scss
@@ -5,4 +5,8 @@
 'aberration_silver/index',
 'aberration_gold/index',
 'extinction/index',
-'atlas-kraken/index';
+'atlas-kraken/index',
+
+
+
+'custom/index';
