Supporter tier & shop pack cluster restriction

--- a/resources/assets/sass/v2/common/_common.scss
+++ b/resources/assets/sass/v2/common/_common.scss
@@ -9,6 +9,7 @@
         'alert/alert',
         'package/package',
         'token/package',
+        'supporter-tiers/package',
         'markdown-content/markdown',
         //'snow/snow',
         'label/label',
