--- a/resources/assets/sass/v2/pages/_pages.scss
+++ b/resources/assets/sass/v2/pages/_pages.scss
@@ -10,5 +10,6 @@
         'news/news',
         'supplies/supplies',
         'token/token',
+        'supporter-tier/supporter-tier',
         'payment/payment',
         'subscription/subscriptions';
