--- a/resources/assets/sass/v2/pages/supplies/_supplies.scss
+++ b/resources/assets/sass/v2/pages/supplies/_supplies.scss
@@ -77,6 +77,17 @@
         }
     }
 
+    &.buy {
+
+        .package-category {
+            .label {
+                position: absolute;
+                top:20px;
+                left:35px;
+            }
+        }
+    }
+
     &.single {
 
         .banner {
