tweak theme supporter tier readability

--- a/resources/assets/sass/v2/layout/themes/aberration_gold/index.scss
+++ b/resources/assets/sass/v2/layout/themes/aberration_gold/index.scss
@@ -1,5 +1,7 @@
 &.theme-aberration-gold {
 
+    $primary: #b06b45;
+
     background: #253138;
     background-image:url('/img/themes_copyright/aberration_gold/bg_purple.jpg');
     background-size:contain;
