--- a/resources/assets/sass/v2/layout/themes/atlas-kraken/index.scss
+++ b/resources/assets/sass/v2/layout/themes/atlas-kraken/index.scss
@@ -31,6 +31,7 @@
     .frame .contentwrap a span,
     &.inspector .results__title,
     &.forum .forum_wrapper h3,
+    h2,
     h4,
     .main_content a:not(.btn):not(.label-donor),
     .banner .navigation ul.nav li.active a,
