--- a/resources/assets/sass/v2/pages/news/show.scss
+++ b/resources/assets/sass/v2/pages/news/show.scss
@@ -9,6 +9,14 @@
             font-size: 16px;
             color: $white;
         }
+
+        &.custom_bg {
+            .background {
+                img {
+                    opacity: .8;
+                }
+            }
+        }
     }
 
     .summary {
