big banner + aberration theme color fix + row loop tweak

--- a/resources/assets/sass/v2/layout/themes/aberration/index.scss
+++ b/resources/assets/sass/v2/layout/themes/aberration/index.scss
@@ -2,7 +2,7 @@
 
     background: #253138;
     background-image:url('/img/themes_copyright/aberration/bg_purple.jpg');
-    color:#fff;
+    //color:#fff;
 
     p {
         color:#fff
