--- a/resources/assets/sass/v2/common/pagebuilder/index.scss
+++ b/resources/assets/sass/v2/common/pagebuilder/index.scss
@@ -2,6 +2,7 @@
 
     @import "blocks/panels",
     "blocks/youtube",
+    "blocks/big_banner",
     'blocks/banner',
     'blocks/latest',
     'blocks/servers',
