--- a/resources/assets/sass/v2/layout/themes/aberration/index.scss
+++ b/resources/assets/sass/v2/layout/themes/aberration/index.scss
@@ -140,7 +140,7 @@
         }
     }
 
-    @import 'forum', 'menu', 'inspector', 'shop';
+    @import 'forum', 'menu', 'inspector', 'shop', 'button';
 
     //footer.footer {
     //    border-top-color:#d6d3ac;
