--- a/resources/assets/sass/v2/layout/themes/atlas-kraken/index.scss
+++ b/resources/assets/sass/v2/layout/themes/atlas-kraken/index.scss
@@ -299,5 +299,5 @@
         }
     }
 
-    @import 'forum', 'menu', 'inspector', 'shop', 'frame';
+    @import 'forum', 'menu', 'inspector', 'shop', 'frame', 'button';
 }
