--- a/resources/assets/sass/v2/layout/themes/basic/index.scss
+++ b/resources/assets/sass/v2/layout/themes/basic/index.scss
@@ -46,6 +46,6 @@
         }
     }
 
-    @import 'forum', 'menu', 'inspector', 'shop', 'frame';
+    @import 'forum', 'menu', 'inspector', 'shop', 'frame', 'button';
 
 }
