--- a/resources/assets/sass/v2/layout/themes/extinction/index.scss
+++ b/resources/assets/sass/v2/layout/themes/extinction/index.scss
@@ -246,5 +246,5 @@
         }
     }
 
-    @import 'forum', 'menu', 'inspector', 'shop', 'frame';
+    @import 'forum', 'menu', 'inspector', 'shop', 'frame', 'button';
 }
