--- a/resources/assets/sass/v2/layout/themes/basic/button.scss
+++ b/resources/assets/sass/v2/layout/themes/basic/button.scss
@@ -7,6 +7,8 @@
 
     border: none;
 
+    transition: background-image 0.2s ease;
+
     span {
         display: block;
         padding:10px 0 0 10px;
