fix white text bug for Flot tooltip

--- a/resources/assets/sass/v2/layout/themes/basic/index.scss
+++ b/resources/assets/sass/v2/layout/themes/basic/index.scss
@@ -46,6 +46,10 @@
         }
     }
 
+    .flotTip {
+        color:#666 !important;
+    }
+
     @import 'forum', 'menu', 'inspector', 'shop', 'frame', 'button';
 
 }
