--- a/resources/assets/sass/v2/layout/themes/extinction/frame.scss
+++ b/resources/assets/sass/v2/layout/themes/extinction/frame.scss
@@ -79,8 +79,8 @@
                     border:none;
                 }
 
-                .stat_canvas {
-                    color:#fff;
+                .stat_canvas * {
+                    color:#666;
 
                     .legend {
                         color:#666;
