--- a/resources/assets/sass/v2/layout/themes/aberration_silver/menu.scss
+++ b/resources/assets/sass/v2/layout/themes/aberration_silver/menu.scss
@@ -99,7 +99,7 @@
 
                 .dropdown {
                     .dashboard {
-                        color:#999 !important;
+                        //color:#999 !important;
                     }
                 }
             }
