--- a/resources/assets/sass/v2/common/pagebuilder/blocks/servers.scss
+++ b/resources/assets/sass/v2/common/pagebuilder/blocks/servers.scss
@@ -31,15 +31,12 @@
         }
 
         &.has_background {
-            .server-block-content {
-
-                h2,
-                .help,
-                .status_message {
-                    color:#fff;
-                    text-shadow: 1px 1px 13px #000;
-                }
-
+            .server-block-content h2,
+            .server-block-content .help span,
+            .status_message,
+            .version {
+                color:#fff;
+                text-shadow: 1px 1px 13px #000;
             }
         }
 
