--- a/resources/assets/sass/v2/common/banner/_banner.scss
+++ b/resources/assets/sass/v2/common/banner/_banner.scss
@@ -124,6 +124,17 @@
     //options
     .banner {
 
+
+
+        .full-content-banner {
+
+            margin-top:110px;
+
+            h1 {
+                margin-bottom:90px;
+            }
+        }
+
         .text-only {
             //margin-top:$inner-gutter;
             text-align: center;
