--- a/resources/assets/sass/v2/pages/_pages.scss
+++ b/resources/assets/sass/v2/pages/_pages.scss
@@ -12,4 +12,5 @@
         'token/token',
         'supporter-tier/supporter-tier',
         'payment/payment',
-        'subscription/subscriptions';
+        'subscription/subscriptions',
+        'calendar/_calendar';
