--- a/resources/assets/sass/v2/layout/themes/extinction/button.scss
+++ b/resources/assets/sass/v2/layout/themes/extinction/button.scss
@@ -1,14 +1,19 @@
 .btn-theme {
-
     margin-left:-22px;
-
     background-image:url('/img/themes_copyright/extinction/button_rock.png');
 
     &:hover {
+        outline: none;
         background-image:url('/img/themes_copyright/extinction/button_rock_hover.png');
     }
 
     span {
         padding:23px 11px 0 26px;
+    }
+}
+
+button.btn-theme {
+    span {
+        padding: 14px 11px 0 26px;
     }
 }
