--- a/resources/assets/sass/v2/pages/calendar/_calendar.scss
+++ b/resources/assets/sass/v2/pages/calendar/_calendar.scss
@@ -110,6 +110,14 @@
                 display: none;
                 height: 0;
             }
+
+            .participate-btn {
+
+                small {
+                    opacity: .8;
+                    font-size:14px;
+                }
+            }
         }
 
         .related {
