layout v3 + news & calendar using v3

--- a/resources/assets/sass/v3/layout/footer/_footer.scss
+++ b/resources/assets/sass/v3/layout/footer/_footer.scss
@@ -102,8 +102,8 @@ footer.footer {
     .colofon {
         padding: 1rem 0;
         background: var(--footer-secundary-color);
-        margin-right: -1rem;
-        margin-left: -1rem;
+        margin-right: -15px;
+        margin-left: -15px;
 
         .content {
             display: block;
