--- a/resources/assets/sass/v3/layout/content/_content.scss
+++ b/resources/assets/sass/v3/layout/content/_content.scss
@@ -10,6 +10,7 @@
     pointer-events: none;
     -webkit-mask-image: -webkit-linear-gradient(top, white 10%, transparent 100%);
     min-width:100%;
+    max-width:100%;
     height:90vh;
     top: 0;
     right: 0;
@@ -23,7 +24,10 @@
 .main_content {
     position: relative;
     z-index:1;
-    margin:5rem 0 2rem;
+    margin:2rem 0 2rem;
+
+
+    @import "./../default-content";
 }
 
 @import "article-single";
