--- a/resources/assets/sass/v3/layout/content/article-single.scss
+++ b/resources/assets/sass/v3/layout/content/article-single.scss
@@ -1,3 +1,14 @@
 &.article-single {
 
+    .meta {
+        margin-bottom:1rem;
+
+        .category {
+            margin-right: 1rem;
+        }
+
+        .date {
+            font-weight: bold;
+        }
+    }
 }
