--- a/resources/assets/sass/v3/partial/article.scss
+++ b/resources/assets/sass/v3/partial/article.scss
@@ -54,6 +54,7 @@
                 .title {
                     display: block;
                     font-size:2rem;
+                    line-height:2rem;
                     font-weight: bold;
                     margin-top:0;
                     margin-bottom:30px;
@@ -63,7 +64,15 @@
                 .meta {
                     margin-bottom:15px;
 
+                    .category {
+                        display: inline-block;
+                        margin-right:10px;
+                        line-height: 1rem;
+                        padding:2px 5px;
+                    }
+
                     .date {
+                        display: inline-block;
                         color:var(--medium-text);
                     }
                 }
