--- a/resources/assets/sass/v3/partial/hr-title.scss
+++ b/resources/assets/sass/v3/partial/hr-title.scss
@@ -1,19 +1,21 @@
 .hr-title {
     text-align: center;
-    margin-bottom:2rem;
-    background-color:var(--bg-color);
+    padding:5rem 4rem 2rem;
+    margin-bottom:0;
     z-index:1;
 
     span {
         padding:0 10px;
         background-color:var(--bg-color);
         color:var(--primary-color);
+        font-size:2rem;
+        line-height: 1rem;
     }
 
     &:before {
         z-index:0;
         display: block;
-        margin-bottom:-1.2rem;
+        margin-bottom:-1.6rem;
         content: '';
         width:100%;
         height:1px;
